--- a/angularclient/src/app/login-page/login-page.component.html
+++ b/angularclient/src/app/login-page/login-page.component.html
@@ -1,1 +1,23 @@
-<p>login-page works!</p>
+<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+ <div class="form-group">
+    <label for="login">Login:</label>
+    <input type="text" [(ngModel)]="loginDto.empLogin"
+        class="form-control"
+        id="login"
+        name="login"
+        placeholder="Login"
+        required #login="ngModel">
+ </div>
+ <div class="form-group">
+    <label for="password">Password:</label>
+    <input type="text" [(ngModel)]="loginDto.empPassword"
+        class="form-control"
+        id="password"
+        name="password"
+        placeholder="Password"
+        required #password="ngModel">
+ </div>
+ <div class="center">
+    <button type="submit" id="submitBtn" [disabled]="!loginForm.valid">Sign in</button>
+ </div>
+</form>
