--- a/angularclient/src/app/personal-data/personal-data.component.html
+++ b/angularclient/src/app/personal-data/personal-data.component.html
@@ -1,1 +1,5 @@
-<p>personal-data works!</p>
+<div>
+    <h1>Employee Details</h1>
+    <p>Name: {{employee.personId}}</p>
+    <p>Position: {{ employee.job }}</p>
+</div>
