--- a/angularclient/src/app/receptionist-page/receptionist-page.component.html
+++ b/angularclient/src/app/receptionist-page/receptionist-page.component.html
@@ -1,2 +1,5 @@
 <p>receptionist-page works!</p>
 <p>{{employeeId.id}}</p>
+<div>
+  <button (click)="showVacantRooms()">Pokaż puste pokoje</button>
+</div>
