--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -1,1 +1,35 @@
-<p>admin-page works!</p>
+<div class="body">
+    <div class="container">
+        <div class="buttonsContainer">
+            <button class="button">HIRE</button>
+            <button class="button red">FIRE</button>
+        </div>
+        <div class="dataContainer">
+            <div class="listItem">
+                <div class="left">
+                    Wszystkie dane
+                </div>
+                <div class="right">
+                    <button class="button yellow">EDIT</button>
+                </div>
+            </div>
+            <div class="listItem">
+                <div class="left">
+                    Wszystkie dane
+                </div>
+                <div class="right">
+                    <button class="button yellow">EDIT</button>
+                </div>
+            </div>
+            <div class="listItem">
+                <div class="left">
+                    Wszystkie dane
+                </div>
+                <div class="right">
+                    <button class="button yellow">EDIT</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
