--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -1,2 +1,20 @@
 <p>admin-page works!</p>
-<p>{{employeeId.id}}</p>
+<h1>Zwolnij pracownika</h1>
+<button (click)="getHotelInfo()">Pokaz aktualne dane o hotelu</button>
+<p>Current date = {{currentDate}}</p>
+<p>hotelBalance = {{hotelBalance}}</p>
+
+<form #fireEmployeeForm="ngForm" (ngSubmit)="onSubmitFireEmployee(fireEmployeeForm)">
+    <div class="form-group">
+        <label for="employeeId">employeeId:</label>
+        <input type="text" [(ngModel)]="employeeToFireId"
+           class="form-control"
+           id="employeeToFireId"
+           name="employeeToFireId"
+           placeholder="employeeToFireId"
+           required #login="ngModel">
+    </div>
+    <div class="center">
+       <button type="submit" id="submitBtn" [disabled]="!fireEmployeeForm.valid">Zwolnij</button>
+    </div>
+   </form>
