--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -1,9 +1,9 @@
-<p>admin-page works!</p>
-<h1>Zwolnij pracownika</h1>
+
 <button (click)="getHotelInfo()">Pokaz aktualne dane o hotelu</button>
 <p>Current date = {{currentDate}}</p>
 <p>hotelBalance = {{hotelBalance}}</p>
 
+<h1>Zwolnij pracownika</h1>
 <form #fireEmployeeForm="ngForm" (ngSubmit)="onSubmitFireEmployee(fireEmployeeForm)">
     <div class="form-group">
         <label for="employeeId">employeeId:</label>
@@ -16,5 +16,104 @@
     </div>
     <div class="center">
        <button type="submit" id="submitBtn" [disabled]="!fireEmployeeForm.valid">Zwolnij</button>
+    </div>
+   </form>
+
+
+
+<h1>Zmien pracownika</h1>
+<form #editEmployeeForm="ngForm" (ngSubmit)="onSubmitEditEmployee(editEmployeeForm)">
+    <div class="form-group">
+        <label for="personId">employeeId:</label>
+        <input type="text" [(ngModel)]="employee.personId"
+           class="form-control"
+           id="personId"
+           name="personId"
+           placeholder="personId"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="firstName">firstName:</label>
+        <input type="text" [(ngModel)]="employee.firstName"
+           class="form-control"
+           id="firstName"
+           name="firstName"
+           placeholder="firstName"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="lastName">lastName:</label>
+        <input type="text" [(ngModel)]="employee.lastName"
+           class="form-control"
+           id="lastName"
+           name="lastName"
+           placeholder="lastName"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="pesel">pesel:</label>
+        <input type="text" [(ngModel)]="employee.pesel"
+           class="form-control"
+           id="pesel"
+           name="pesel"
+           placeholder="pesel"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="phoneNumber">phoneNumber:</label>
+        <input type="text" [(ngModel)]="employee.phoneNumber"
+           class="form-control"
+           id="phoneNumber"
+           name="phoneNumber"
+           placeholder="phoneNumber"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="email">email:</label>
+        <input type="text" [(ngModel)]="employee.emailAddress"
+           class="form-control"
+           id="email"
+           name="email"
+           placeholder="email"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="job">job:</label>
+        <input type="text" [(ngModel)]="employee.job"
+           class="form-control"
+           id="job"
+           name="job"
+           placeholder="job"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="salary">salary:</label>
+        <input type="text" [(ngModel)]="employee.salary"
+           class="form-control"
+           id="salary"
+           name="salary"
+           placeholder="salary"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="commission">commission:</label>
+        <input type="text" [(ngModel)]="employee.commission"
+           class="form-control"
+           id="commission"
+           name="commission"
+           placeholder="commission"
+           required #login="ngModel">
+    </div>
+    <div class="form-group">
+        <label for="hourlyWage">hourlyWage:</label>
+        <input type="text" [(ngModel)]="employee.hourlyWage"
+           class="form-control"
+           id="hourlyWage"
+           name="hourlyWage"
+           placeholder="hourlyWage"
+           required #login="ngModel">
+    </div>
+    <div class="center">
+       <button type="submit" id="submitBtn">Zmien</button>
     </div>
    </form>
