--- a/angularclient/src/app/header/header.component.css
+++ b/angularclient/src/app/header/header.component.css
@@ -1,8 +1,62 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     padding: 0px;
     margin: 0px;
+}
+
+.header{
+    background: linear-gradient(90deg, #5DEF7D 0%, #3BA252 98.51%); 
+    width: 100%; 
+    height: 50px;
+}
+
+.left {
+    width: 200px;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: white;
+}
+
+.right {
+    width: calc(100% - 200px);
+    height: 100%;
+    float: right;
+}
+
+.wylogujContainer {
+    float: right;
+    width: 100px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    border-radius: 20px;
+    color: white;
+    background-color: rgb(91, 196, 91);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    text-transform: uppercase;
+    border: 0px;
+    padding: 10px;
+    font-size: 15px;
+}
+
+.wyloguj{
+    background-color: rgb(255, 46, 46);
+    padding: 8px;
+}
+
+.wyloguj:hover{
+    cursor: pointer;
+    background-color: rgb(147, 9, 37);
 }
