admin personal css

--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -1,2 +1,42 @@
-<p>admin-page works!</p>
-<p>{{employeeId.id}}</p>
+<div class="body">
+    <div class="leftBody">
+        <div class="createContainer">
+            <div class="createText">
+                Create Employee
+            </div>
+            <div class="createInputs">
+                <input type="text"><br>
+                <input type="text"><br>
+                <input type="text"><br>
+                <input type="text"><br>
+                <input type="text"><br>
+            </div>
+            <div class="createSubmit">
+                <button class="createSubmitButton">APPLY</button>
+            </div>
+        </div>
+    </div>
+    <div class="rightBody">
+        <div class="employeesContainer">
+            <div class="listItem">
+                <div class="listLeft">
+                    <div class="firstName">
+                        Imie
+                    </div>
+                    <div class="lastName">
+                        Nazwisko
+                    </div>
+                    <div class="phoneNumber">
+                        Numer telefonu
+                    </div>
+                    <div class="job">
+                        praca
+                    </div>
+                </div>
+                <div class="listRight">
+                    <button class="fire">FIRE</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
