--- a/angularclient/src/app/admin-page/admin-page.component.css
+++ b/angularclient/src/app/admin-page/admin-page.component.css
@@ -28,6 +28,7 @@
 .createText{
     font-size: 25px;
     text-align: center;
+    font-weight: 700;
 }
 
 input[type="text"]{
@@ -69,6 +70,7 @@ button:hover{
     height: 50px;
     background-color: rgb(181, 181, 181);
     border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .listLeft{
@@ -102,4 +104,20 @@ button:hover{
     justify-content: center;
     align-items: center;
     width: 150px;
+}
+
+.top{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 700;
+}
+.bottom{
+    width: 100%;
+    height: 90%;
+    overflow: auto;
+    padding: 10px;
 }
