--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="listRight">
-                            <button class="fire">FIRE</button>
+                            <button class="fire" (onClick)="fire(currentEmployee.personId)">FIRE</button>
                         </div>
                     </div>
                 </div>
