html css do reszty stron

--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="listRight">
-                            <button class="fire" (onClick)="fire(currentEmployee.personId)">FIRE</button>
+                            <button class="fire" (click)="fire(currentEmployee.personId)">FIRE</button>
                         </div>
                     </div>
                 </div>
@@ -55,3 +55,6 @@
         </div>
     </div>
 </div>
+<div class="footer">
+    <button class="personalData button" (click)="showPersonalData()">Personal Data</button>
+  </div>
