--- a/angularclient/src/app/cleaner-page/cleaner-page.component.html
+++ b/angularclient/src/app/cleaner-page/cleaner-page.component.html
@@ -1,2 +1,3 @@
-<p>cleaner-page works!</p>
-<button (click)="showPersonalData()">Dane osobowe</button>
+<div class="footer">
+    <button class="personalData button" (click)="showPersonalData()">Personal Data</button>
+  </div>
