--- a/angularclient/src/app/admin-page/admin-page.component.css
+++ b/angularclient/src/app/admin-page/admin-page.component.css
@@ -4,7 +4,7 @@
 
 .body {
     width: 100vw;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 100px);
 }
 
 .rightBody {
@@ -120,4 +120,23 @@ button:hover{
     height: 90%;
     overflow: auto;
     padding: 10px;
+}
+
+.personalData{
+    background-color: gray;
+}
+
+.personalData:hover{
+    background-color: rgb(87, 87, 87);
+}
+
+.footer {
+    width: 100vw;
+    height: 50px;
+    background-color: rgb(95, 95, 95);
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
