--- a/angularclient/src/app/cook-page/cook-page.component.html
+++ b/angularclient/src/app/cook-page/cook-page.component.html
@@ -1,28 +1,62 @@
-<p>cook-page works!</p>
-<p>{{employeeId.id}}</p>
-<h1>Ukoncz zamowienie</h1>
-<form #completeOrderForm="ngForm" (ngSubmit)="onSubmitCompleteOrder(completeOrderForm)">
-  <div class="form-group">
-    <label for="orderId">orderId:</label>
-    <input type="text" [(ngModel)]="orderId"
-           class="form-control"
-           id="orderId"
-           name="orderId"
-           placeholder="orderId"
-           required #login="ngModel">
-  </div>
-  <div class="center">
-    <button type="submit" id="submitBtn" [disabled]="!completeOrderForm.valid">Ukoncz zamowienie</button>
-  </div>
-  <div>
-    <button (click)="showOrders()">Pokaż zamówienia</button>
-  </div>
-  <div *ngIf="displayOrders">
-    <div *ngFor="let menu of orderList">
-      <!-- Display properties of the room object -->
-      <p>Dish Name: {{menu.dishName}}</p>
-      <p>Dish Price: {{menu.dishPrice}}</p>
-      <!-- Add more properties as needed -->
+<div class="body">
+<div class="rightBody">
+
+    <form #completeOrderForm="ngForm" (ngSubmit)="onSubmitCompleteOrder(completeOrderForm)">
+      <div class="orderContainer">
+    <div class="topOrder">
+      <h1>Complete The Order</h1>
     </div>
+    
+      <div class="inputContainer">
+      <div class="form-group">
+        <label for="orderId">Order ID:</label><br>
+        <input type="text" [(ngModel)]="orderId"
+               class="form-control"
+               id="orderId"
+               name="orderId"
+               placeholder=""
+               required #login="ngModel">
+      </div>
+    </div>
+      <div class="submitOrder">
+        <button type="submit" id="submitBtn" [disabled]="!completeOrderForm.valid">Complete</button>
+      </div> 
+    </div>
+    </form>
+</div>
+<div class="leftBody">
+  <div class="listContainer">
+    <div class="orderList">
+      ORDER LIST
+    </div>
+    <div *ngIf="orderList.length === 0; else notEmpty">
+      <div class="noData">
+        No data
+      </div>
+    </div>
+    <ng-template #notEmpty>
+      <div *ngFor="let menu of orderList">
+        <div class="listItem">
+          <div class="dishID">
+            DISH ID: {{menu.dishId}}
+          </div>
+          <div class="dane">
+            Name: {{menu.dishName}}
+          </div>
+          <div class="dane">
+            Price: {{menu.dishPrice}}
+          </div>
+        </div>
+      </div>
+    </ng-template>
   </div>
-</form>
+</div>
+
+<div class="footer">
+  <button class="personalData button" (click)="showPersonalData()">Personal Data</button>
+</div>
+  
+</div>
+
+
+
