--- a/angularclient/src/app/login-page/login-page.component.html
+++ b/angularclient/src/app/login-page/login-page.component.html
@@ -15,7 +15,7 @@
                required #login="ngModel">
          </div>
          <div class="form-group">
-            <input type="text" [(ngModel)]="loginDto.empPassword"
+            <input type="password" [(ngModel)]="loginDto.empPassword"
                class="form-control"
                id="password"
                name="password"
