--- a/angularclient/src/app/waiter-page/waiter-page.component.css
+++ b/angularclient/src/app/waiter-page/waiter-page.component.css
@@ -32,3 +32,28 @@ button:hover{
 .personalData:hover{
     background-color: rgb(87, 87, 87);
 }
+
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.body {
+    width: 100vw;
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="text"]{
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    border: 1px solid black;
+}
+
+.buttonSubmit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
