html css reszta stron

--- a/angularclient/src/app/admin-page/admin-page.component.css
+++ b/angularclient/src/app/admin-page/admin-page.component.css
@@ -140,3 +140,9 @@ button:hover{
     justify-content: center;
     align-items: center;
 }
+
+.balance{
+    position: absolute;
+    top: 85px;
+    right: 35px;
+}
