--- a/angularclient/src/app/admin-page/admin-page.component.html
+++ b/angularclient/src/app/admin-page/admin-page.component.html
@@ -1,3 +1,7 @@
+
+<div class="balance">
+  Balance: {{balance}}
+</div>
 <div class="body">
     <div class="leftBody">
         <div class="createContainer">
