--- a/angularclient/src/app/header/header.component.html
+++ b/angularclient/src/app/header/header.component.html
@@ -6,5 +6,14 @@
         <div class="wylogujContainer">
             <button class="wyloguj" routerLink="">Logout</button>
         </div>
+        <div class="nextDay">
+            <div class="data">
+                {{currentDate}}
+            </div>
+            <div class="buttonNextDayContainer">
+                <button (click)="nextDay()" class="buttonNextDay">-></button>
+            </div> 
+        </div>
+
     </div>
 </div>
